Added travis:create_database_config task, added to travis before_script hook.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 rvm:
   - jruby-19mode
+before_script:
+  - rake travis:create_database_config
 deploy:
   provider: heroku
   api_key:
